Added some error handling

--- a/EmployeeLog/EmployeeLog/Views/Home/Index.cshtml
+++ b/EmployeeLog/EmployeeLog/Views/Home/Index.cshtml
@@ -9,24 +9,24 @@
     <div class="grid-item news-grid" >
         
         <h3>News</h3>
+        <p> This is a test, consectetur adipiscing elit. Sed eget diam nec metus vestibulum ultricies et ut nibh. Quisque ullamcorper mi eget lorem auctor, id pharetra nibh condimentum. Curabitur egestas pharetra posuere. Nullam quis eleifend orci. Nulla posuere maximus feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque at interdum dui, a semper quam. Praesent aliquet mauris nunc. Etiam sodales lectus lectus, eu sodales neque dapibus hendrerit. Sed accumsan sollicitudin sapien, id porttitor lacus. Suspendisse ac suscipit mi, in dictum eros. Curabitur arcu urna, facilisis id elementum a, facilisis quis dui. In hac habitasse platea dictumst. Nam non elit in quam bibendum placerat laoreet sed ligula.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget diam nec metus vestibulum ultricies et ut nibh. Quisque ullamcorper mi eget lorem auctor, id pharetra nibh condimentum. Curabitur egestas pharetra posuere. Nullam quis eleifend orci. Nulla posuere maximus feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque at interdum dui, a semper quam. Praesent aliquet mauris nunc. Etiam sodales lectus lectus, eu sodales neque dapibus hendrerit. Sed accumsan sollicitudin sapien, id porttitor lacus. Suspendisse ac suscipit mi, in dictum eros. Curabitur arcu urna, facilisis id elementum a, facilisis quis dui. In hac habitasse platea dictumst. Nam non elit in quam bibendum placerat laoreet sed ligula.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget diam nec metus vestibulum ultricies et ut nibh. Quisque ullamcorper mi eget lorem auctor, id pharetra nibh condimentum. Curabitur egestas pharetra posuere. Nullam quis eleifend orci. Nulla posuere maximus feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque at interdum dui, a semper quam. Praesent aliquet mauris nunc. Etiam sodales lectus lectus, eu sodales neque dapibus hendrerit. Sed accumsan sollicitudin sapien, id porttitor lacus. Suspendisse ac suscipit mi, in dictum eros. Curabitur arcu urna, facilisis id elementum a, facilisis quis dui. In hac habitasse platea dictumst. Nam non elit in quam bibendum placerat laoreet sed ligula.</p>
+   
     </div>
 
 
     <div class="grid-item">
 
         <h3>Call for retail sector to fill vacancies</h3>
+
         <p>
             The organisations have said that business owners in hospitality and ex-retail staff should use the JobCentre Online (JCOL) digital platform as an effective way to connect with each other.
 
             JobCentre Online is an online platform designed by the Department for Communities to support jobseekers find the right roles and employers the best suited employees. The free service allows employers to register with Employers Online and have their vacancies posted on JCOL the same day.
 
             Employers in the hospitality sector can notify and manage their job vacancies online in a quick, easy and convenient way and can enter job specifications, qualifications required, wage details and any other requirements specific to their vacancies, with the ability to manage the account online 24/7.
-
-
-           
         </p>
+
     </div>
 
 
