--- a/EmployeeLog/EmployeeLog/style/StyleSheet1.css
+++ b/EmployeeLog/EmployeeLog/style/StyleSheet1.css
@@ -129,12 +129,24 @@ p{
     outline: none;
     padding: 0px 0px 5px 5px;
 }
+.login-error-msg {
+    width: 72%;
+    text-align: center;
+    margin: 24px;
+    padding: 5px;
+    font-size: 8px;
+    font-weight: bold;
+    color: #8a0000;
+    border: 1px solid #8a0000;
+    background-color: #e58f8f;
+    opacity: 8;
+}
 
 .profile-btns {
     list-style-type: none;
-    width:auto;
-    text-align:center;
-    font-size:small;
+    width: auto;
+    text-align: center;
+    font-size: small;
     margin: 0px;
     padding: 0px;
     overflow: hidden;
