Added Employer profile
Added ability to create employer login account and profile

--- a/EmployeeLog/EmployeeLog/Views/Register/CreateAcc.cshtml
+++ b/EmployeeLog/EmployeeLog/Views/Register/CreateAcc.cshtml
@@ -31,6 +31,12 @@
                         <input type="text" name="Surname" id="surname-field" class="login-form-field" placeholder="Surname">
                         <input type="text" name="Name" id="username-field" class="login-form-field" placeholder="Username">
                         <input type="password" name="Password" id="password-field" class="login-form-field" placeholder="Password">
+              
+                        <input type="checkbox"  name="IsEmployer"  value="true">
+                        <input type="hidden" value="false" name="IsEmployer" />
+                        
+                        <label for="IsEmployer">I am an Employer</label>
+                      
 
                         <button type="submit" class="float">Register User</button>
                     </form>
