--- a/EmployeeLog/EmployeeLog/Views/Login/Login.cshtml
+++ b/EmployeeLog/EmployeeLog/Views/Login/Login.cshtml
@@ -28,7 +28,7 @@
          </div> -->
 
                 <form action="Verify" method="post" id="login-form">
-                    <input type="text" name="Name" id="username-field" class="login-form-field" placeholder="Username">
+                    <input type="text" name="UserName" id="username-field" class="login-form-field" placeholder="Username">
                     <input type="password" name="Password" id="password-field" class="login-form-field" placeholder="Password">
 
                     <button type="submit" class="float">  Login</button>  <!--<a href="https://localhost:44318/Profile/Profile">-->
