--- a/EmployeeLog/EmployeeLog/Views/Register/CreateAcc.cshtml
+++ b/EmployeeLog/EmployeeLog/Views/Register/CreateAcc.cshtml
@@ -29,7 +29,7 @@
                     <form action="CreateUser" method="post" id="login-form">
                         <input type="text" name="FirstName" id="firstname-field" class="login-form-field" placeholder="firstname">
                         <input type="text" name="Surname" id="surname-field" class="login-form-field" placeholder="Surname">
-                        <input type="text" name="Name" id="username-field" class="login-form-field" placeholder="Username">
+                        <input type="text" name="UserName" id="username-field" class="login-form-field" placeholder="Username">
                         <input type="password" name="Password" id="password-field" class="login-form-field" placeholder="Password">
               
                         <input type="checkbox"  name="IsEmployer"  value="true">
